# Haven-Tools

./: Blowfish.h  CMakeLists.txt  Gff.cpp  Gff.h  Mesh.h  README.md  animation.cpp  animation.h  assembly list  dds_loader.cpp  dds_loader.h  erf.cpp  export.cpp  main.cpp  mmh_loader.cpp  mmh_loader.h  model_loader.cpp  model_loader.h  model_names.csv  phy_loader.cpp  renderer.cpp  renderer.h  types.cpp  types.h  ui.cpp  ui.h
.claude/: settings.local.json
Wiki/: README_LOCAL.md  index.html  run_wiki.ps1  serve.py
Wiki/_inventory/: live_asset_errors.json  live_asset_manifest.json  live_discovered_assets.json  live_download_errors.json  live_download_manifest.json  live_media.json  live_namespaces.json  live_pages.json  live_pages_missing_2025_capture.json  live_rewrite_unresolved.json  live_summary.json  live_urls.txt  live_verification_summary.json  local_server.json  wayback_2025_captures_all.json  wayback_2025_selected.json  wayback_2025_summary.json
Wiki/_tools/: export_github_wiki.py  mirror_live.py  mirror_wayback.py
Wiki/assets/local/: wiki-static.css
Wiki/daowiki-java/: pyproject.toml  zensical.toml
Wiki/daowiki-java/docs/: index.md
Wiki/pages/: %D0%93%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0.html  %D0%93%D0%BB%D0%BE%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B9.html  %D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%86%D0%B8%D1%8F_%D0%BF%D0%BE_%D0%BF%D0%B5%D1%-3026c4d8ab26.html  %D0%9F%D0%B0%D0%BD%D0%B5%D0%BB%D0%B8_%D0%B8%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%BE%D0%B2.html  %D0%A0%D1%83%D1%81%D1%81%D0%BA%D0%B8%D0%B9%3A%D0%97%D0%B0%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0-e1db0e024401.html  %D0%A1%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0_%D1%80%D0%B5%D0%B4%D0%B0%D0%BA%D1%82%D0%BE%D1%80%D0%B0.html  %D0%AF_%D1%80%D0%B5%D0%B4%D0%B0%D0%BA%D1%82%D0%BE%D1%80.html  2DA.html  2DA_base_2da.html  2DA_file.html  2DA_ranges_in_use.html  2da_base.xls.html  2da_constants_h.html  2da_matrix.html  3D_control.html  3D_controls.html  3rd_party_extensions.html  ABILITY_%2A.html  ABILITY_COST_TYPE_%2A.html  ABILITY_FLAG_%2A.html  ABILITY_FLANK_FACING_%2A.html  ABILITY_FLANK_SIZE_%2A.html  ABILITY_TYPE_%2A.html  ABI_2da.html  ABI_Base.html  ABI_Base_2da.html  ABI_base.xls.html  AI.html  AI_abilities_cond.xls.html  AMBIENT_ANIM_FREQ_%2A.html  AMBIENT_MOVE_%2A.html  AMBIENT_SYSTEM_%2A.html  ANI.html  ANIM_2da.html  ANIM_Placeables.xls.html  ANIM_base.xls.html  ANIM_base_2da.html  ANIM_combat.xls.html  ANIM_combat_2da.html  ANIM_placeables_2da.html  (+5340 more)
Wiki/pages/2DA/: ru.html
Wiki/pages/ABI_base.xls/: ru.html
Wiki/pages/Ability/: ru.html
Wiki/pages/Add_A_New_Class_Tutorial/: zh.html
Wiki/pages/Adding_a_Location_to_the_Single_Player_Campaign_Tutorial/: ru.html
Wiki/pages/Adding_custom_armor_tutorial/: ru.html
Wiki/pages/Area/: ru.html
Wiki/pages/Area_list/: ru.html
Wiki/pages/Area_tutorial/: ru.html
Wiki/pages/Attribute/: ru.html
Wiki/pages/Backgrounds_tutorial/: ru.html
Wiki/pages/Bug%3A_Builder_to_Builder_Load_may_not_reproduce_resource_detail_correctly/: ru.html
Wiki/pages/Bug%3A_Computer_names_with_non-English_characters_can_cause_checkout_problems/: ru.html
Wiki/pages/Bug%3A_ConfigureToolset_application_fails_to_set_a_registry_key/: ru.html
Wiki/pages/Bug%3A_Custom_Placeables_appear/: disapear_randomly.html
Wiki/pages/Bug%3A_Installer_hangs_at_the_stage_of_Execute%3Aregsvr32.exe_/: s_%22C%3A%5CDragon_Age%5Ctools%5CEngine.dll%22.html
Wiki/pages/Bug%3A_Russian_characters_are_displayed_incorrectly/: ru.html
Wiki/pages/Bug%3A_Unable_to_save_a_new_module/: ru.html
Wiki/pages/Builder_to_builder/: ru.html
Wiki/pages/Builder_to_player/: ru.html
Wiki/pages/Category%3AItem_upgrading_/: _runes_functions.html
Wiki/pages/Checking_in_and_checking_out_resources/: ru.html
Wiki/pages/Classes/: ru.html
Wiki/pages/Combat_Rules/: ru.html
Wiki/pages/Common_Problems/: ru.html
Wiki/pages/Comparisons_with_other_toolkits/: ru.html
Wiki/pages/Compatibility/: ru.html
anim_debug/: fable2_anims.animation_toc  locomotion.loco
archive/fvn dump-4512-1-0/: fnvdump-20110527.typelist
sheets/: Area Names.xlsx  model names.xlsx
src/: Blowfish.cpp  Gff.cpp  Gff.h  Gff4FieldNames.h  Mesh.h  Rml_Loader.cpp  Rml_Loader.h  animation.cpp  animation.h  dds_loader.cpp  dds_loader.h  erf.cpp  erf.h  export.cpp  export.h  fnv.cpp  gda.cpp  gda.h  gff32.cpp  gff32.h  gffviewer.cpp  gffviewer.h  import.cpp  import.h  level_loader.cpp  main.cpp  mmh_loader.cpp  mmh_loader.h  model_loader.cpp  model_loader.h  model_names.csv  mor_loader.cpp  mor_loader.h  phy_loader.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  spt.cpp  spt.h  (+21 more)
src/CharacterDesigner/: CharacterDesigner.cpp  CharacterDesigner.h  CharacterDesigner_Internal.h  MorphLoader.cpp
src/Core/: Mesh.h  fnv.h  types.cpp  types.h
src/Fonts/: IconsFontAwesome6.h
src/Formats/: Gff.cpp  erf.cpp  erf.h  gff32.h
src/IO/: export.cpp  import.h  terrain_export.cpp  terrain_export.h
src/Loaders/: LevelDatabase.h  Rml_Loader.cpp  Rml_Loader.h  dds_loader.cpp  dds_loader.h  level_loader.h  mmh_loader.cpp  mmh_loader.h  model_loader.cpp  phy_loader.cpp  spt.cpp  spt.h  tnt_loader.cpp
src/Render/: animation.cpp  renderer.cpp  renderer.h
src/Shaders/: D3d_Context.cpp  D3d_Context.h  shader.cpp  shader.h
src/SpeedTree/: Allocator.cpp  BillboardLeaf.cpp  Branch.cpp  BranchInfo.cpp  Debug.h  FileAccess.cpp  FrondEngine.cpp  IndexedGeometry.cpp  IndexedGeometry.h  LeafGeometry.cpp  LeafInfo.cpp  LeafLod.h  LightingEngine.cpp  MapBank.cpp  ProjectedShadow.cpp  RootSupportInfo.cpp  SimpleBillboard.cpp  SpeedTreeAllocator.h  SpeedTreeMemory.h  SpeedTreeRT.cpp  SpeedWind.cpp  StructsSupport.h  TreeEngine.cpp  WindInfo.cpp
src/UI/: ui.h  ui_audio.cpp  ui_browser.cpp  ui_internal.h  ui_main.cpp  ui_settings.cpp  ui_speedtree.cpp  ui_windows.cpp
src/X360/: X360_Animation.cpp  X360_GffQuirks.h  X360_Iso.cpp  X360_Iso.h  X360_Platform.h  X360_Texture.cpp  X360_Texture.h
src/python/: havenarea_importer.py
src/update/: about_text.h  app.rc  changelog_text.h  update.cpp  update.h
(+198 files in other folders)
